2004-02-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b65

	* Bugfix: #904326. $gallery->app->selfRegCreate = "yes"; was ignored,
	  when Gallery was not in english because the check was against translated "yes".

2004-02-25  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-64

	* Included util.php in GHCC, which is required for the security
	  checks.
	  
2004-02-25  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-63
	
	* Added security checks to GHCC and enabled it.
	
	* Fixed a few bugs (including 826586 and 869838) that deal with
	  certain characters needing to be escaped in shell
	  
	* Reduced the number of eval() statements needed by converting
	  some to use variable variables.  This should fix 843268.

2004-02-24  Jay Rossiter <cryptographite@users.sourceforge.net> 1.4.3-cvs-b62

	* Prevent infinite redirection for directory names which
	  are physically part of the gallery directory. (Bug #903168)

2004-02-24  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b61

	* Performance improvement in album/image count for gallery top
	  level; traverse album list once instead of 3 times.

2004-02-24  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b60

	* Bugfix #805443 (75% fix): check hidden items and no-permission
	  subalbums to correctly display album/image count in header of
	  album view and in "album contains:" count in subalbums and at
	  top level.  Count in header of gallery top level still incorrect.

	* More on #598025: regenerate highlight with correct size after
	  rotating the highlight.

2004-02-24 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b59

	* Bugfix: The lang defaults were not set correctly.

	* Bugfix: Renamed missing validate_email() in gallery_validate_email()

	* Bugfix: Skins selection was broken.

	Thanks to Vallimar for catching this.

2004-02-24  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b58

	* Bugfix #470766: Avoid filename conflict between thumbnails of
	  a movie item and jpeg item with same basename.
