@@ -13,6 +13,7 @@ Benjamin Sadaba		<benjamin.sadaba@turner.com>
 Bharat Mediratta	<bharat@menalto.com>
 Chris Ricker		<kaboom@gatech.edu>
 Chris Smith		<chris@jacko.com>
+Dariush Molavi		<dariush.molavi@gtri.gatech.edu>
 Dana Powers		<dana@slothlovechunk.org>
 Demian Johnston		<djohnston@users.sourceforge.net>
 Ed Wilts 		<ewilts@ewilts.org>
@@ -27,11 +28,11 @@ John W. Holmes		<john@geekpal.com>
 Joseph D. Scheve	<chevy@tnatech.com>
 Ken Frank		<kffrank@mn.mediaone.net>
 Markus Illenseer	<markus@core.de>
+Martin Smallridge 	<info@snailsource.com>
 Matthew McEachen	<mceachen@users.sourceforge.net>
 Rob Lingle		<rob@rel3.net>
 Sammy Spets		<sammys@cse.unsw.edu.au>
 Steve Lacy		<gallery@slacy.com>
 Dr. Tilman Bubeck	<t.bubeck@reinform.de>
 Troy Edwards		<vallimar@sexorcisto.net>
-Martin Smallridge 	<info@snailsource.com>
 Vincent Furia		<vmf@abtech.org>
