@@ -1,3 +1,8 @@
+2004-02-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b66
+
+	* New: Added Gallery integration into nsnnuke.
+	  Code was done by Dariush Molavi. i only did some adjustments and committed.
+
 2004-02-26 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b65
 
 	* Bugfix: #904326. $gallery->app->selfRegCreate = "yes"; was ignored,
